--- a/index.html
+++ b/index.html
@@ -12,8 +12,51 @@
 <div class="Дәмді">
     <a href="">Дәмді</a>
 </div>
+</header><hr>
+<div class="text_1">
+<h1>Дәмді тағам</h1>
+</div> 
+<div class="text_2">
+<p>Аптаның үздік тағамын <br>көріңіз</p>
+</div>
 
-</header>
+    <button class="can">Мәзірді көру</button>
+
+<div class="photo_1">
+<img src="assets/img/bannerImage.png" alt="" class="image-center">
+</div>
+
+<br>
+<br>
+<br>
+<p class="we" >Біз туралы</p>
+<p class="got">Біз ең дәмді тағамдарды<br> дайындаймыз</p>
+<p class="sev">Біз бүкіл қаладағы ең жақсы тағамды дайындаймыз,тамаша тұтынушыларға қызымет көрсету.Ең жақсы тағамдар және ең жақсы бағамен,бізге келіңіз.</p>
+<button class="txt">Тарихты зеріттеңіз</button>
+<br>
+<br>
+<br>
+<div class="photo_2">
+    <img src="assets/img/kazakhCuisine.jpeg" alt="" class="image-center2">
+</div><br>
+<div class="text_3">
+<p>Ұсыныс</p>
+</div>
+<p class="fork">Біздің керемет<br> қызыметтеріміз</p>
+<div class="photo_3">
+<img src="assets/img/free-icon-plate-1232728.png" alt="" class="image-center3">
+</div>
+<p class="sev2"> Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз.</p>
+<br><br><br>
+<div class="photo_4">
+<img src="assets/img/free-icon-fast-food-1753106.png" alt="" >
+</div>
+<p class="fast-food">Фастфуд</p>
+<p class="food">Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз.</p>
+<div class="car">
+    <img src="assets/img/icons8-доставка-50.png" alt="">
+</div>
+<p class="text_4">Жеткізу</p>
+<p class="text_4-1">Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз.</p>
 </body>
-
 </html>
