--- a/index.html
+++ b/index.html
@@ -58,5 +58,38 @@
 </div>
 <p class="text_4">Жеткізу</p>
 <p class="text_4-1">Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз.</p>
+
+<div class="text_5">
+<p>Ұсыныс</p>
+</div>
+<p class="text_5-1">Бізбен байланыс</p>
+<p class="text_5-2">Егер сіз біздің мейрамханада үстелді брондағыңыз келсе, бізбен хабарласыңыз,біз тәулік бойы сөйлесу қызыметімізбен сізге тез қатысамыз.</p>
+<button class="coll">Қазыр бізге қабарласыңыз</button>
+<br>
+<br>
+<div class="good">
+<p id="good-food">Дәмді тағам</p>
+<p>Мейрамхана</p>
+</div>
+
+<div class="services">
+<p id="serv">Қызметтер</p>
+<p>Жеткізу</p>
+<p>Прайс</p>
+<p>Фастфуд</p>
+<p>Бронь</p>
+
+</div>
+<br>
+<br>
+
+<div>
+<p id="information">Ақпарат</p>
+<p>Іс-шара</p>
+<p>Бізбен байланыс</p>
+<p>Құпиялық саясаты</p>
+<p>Қызметтер көрсету шарттары</p>
+</div>
+
 </body>
 </html>
