--- a/index.html
+++ b/index.html
@@ -7,89 +7,142 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
-<div class="Дәмді">
-    <a href="">Дәмді</a>
-</div>
-</header><hr>
-<div class="text_1">
-<h1>Дәмді тағам</h1>
-</div> 
-<div class="text_2">
-<p>Аптаның үздік тағамын <br>көріңіз</p>
-</div>
+        <div class="Дәмді">
+            <a href="">Дәмді</a>
+        </div>
+    </header>
+    <hr>
+    <div class="text_1">
+        <h1>Дәмді тағам</h1>
+    </div>
+    <div class="text_2">
+        <p>Аптаның үздік тағамын <br>көріңіз</p>
+    </div>
 
     <button class="can">Мәзірді көру</button>
 
-<div class="photo_1">
-<img src="assets/img/bannerImage.png" alt="" class="image-center">
-</div>
+    <div class="photo_1">
+        <img src="assets/img/bannerImage.png" alt="" class="image-center">
+    </div>
 
-<br>
-<br>
-<br>
-<p class="we" >Біз туралы</p>
-<p class="got">Біз ең дәмді тағамдарды<br> дайындаймыз</p>
-<p class="sev">Біз бүкіл қаладағы ең жақсы тағамды дайындаймыз,тамаша тұтынушыларға қызымет көрсету.Ең жақсы тағамдар және ең жақсы бағамен,бізге келіңіз.</p>
-<button class="txt">Тарихты зеріттеңіз</button>
-<br>
-<br>
-<br>
-<div class="photo_2">
-    <img src="assets/img/kazakhCuisine.jpeg" alt="" class="image-center2">
-</div><br>
-<div class="text_3">
-<p>Ұсыныс</p>
-</div>
-<p class="fork">Біздің керемет<br> қызыметтеріміз</p>
-<div class="photo_3">
-<img src="assets/img/free-icon-plate-1232728.png" alt="" class="image-center3">
-</div>
-<p class="sev2"> Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз.</p>
-<br><br><br>
-<div class="photo_4">
-<img src="assets/img/free-icon-fast-food-1753106.png" alt="" >
-</div>
-<p class="fast-food">Фастфуд</p>
-<p class="food">Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз.</p>
-<div class="car">
-    <img src="assets/img/icons8-доставка-50.png" alt="">
-</div>
-<p class="text_4">Жеткізу</p>
-<p class="text_4-1">Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы қызметтерді ұсынамыз.</p>
+    <br>
+    <br>
+    <br>
+    <p class="we">Біз туралы</p>
+    <p class="got">Біз ең дәмді тағамдарды<br> дайындаймыз</p>
+    <p class="sev">Біз бүкіл қаладағы ең жақсы тағамды дайындаймыз,тамаша тұтынушыларға қызымет көрсету.Ең жақсы
+        тағамдар және ең жақсы бағамен,бізге келіңіз.</p>
+    <button class="txt">Тарихты зеріттеңіз</button>
+    <br>
+    <br>
+    <br>
+    <div class="photo_2">
+        <img src="assets/img/kazakhCuisine.jpeg" alt="" class="image-center2">
+    </div><br>
+    <div class="text_3">
+        <p>Ұсыныс</p>
+    </div>
+    <p class="fork">Біздің керемет<br> қызыметтеріміз</p>
+    <div class="photo_3">
+        <img src="assets/img/free-icon-plate-1232728.png" alt="" class="image-center3">
+    </div>
+    <p class="sev2"> Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы
+        қызметтерді ұсынамыз.</p>
+    <br><br><br>
+    <div class="photo_4">
+        <img src="assets/img/free-icon-fast-food-1753106.png" alt="">
+    </div>
+    <p class="fast-food">Фастфуд</p>
+    <p class="food">Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша сапалы
+        қызметтерді ұсынамыз.</p>
+    <div class="car">
+        <img src="assets/img/icons8-доставка-50.png" alt="">
+    </div>
+    <p class="text_4">Жеткізу</p>
+    <p class="text_4-1">Біз өз клиенттерімізге көптеген жылдар бойы қаладағы ең жақсы және дәмді тағамдармен тамаша
+        сапалы қызметтерді ұсынамыз.</p>
 
-<div class="text_5">
-<p>Ұсыныс</p>
-</div>
-<p class="text_5-1">Бізбен байланыс</p>
-<p class="text_5-2">Егер сіз біздің мейрамханада үстелді брондағыңыз келсе, бізбен хабарласыңыз,біз тәулік бойы сөйлесу қызыметімізбен сізге тез қатысамыз.</p>
-<button class="coll">Қазыр бізге қабарласыңыз</button>
-<br>
-<br>
-<div class="good">
-<p id="good-food">Дәмді тағам</p>
-<p>Мейрамхана</p>
-</div>
+    <div class="text_5">
+        <p>Ұсыныс</p>
+    </div>
+    <p class="text_5-1">Бізбен байланыс</p>
+    <p class="text_5-2">Егер сіз біздің мейрамханада үстелді брондағыңыз келсе, бізбен хабарласыңыз,біз тәулік бойы
+        сөйлесу қызыметімізбен сізге тез қатысамыз.</p>
+    <button class="coll">Қазыр бізге қабарласыңыз</button>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="special">
+        <h4> Арнайы </h4>
+        <h2> Апта мәзірі </h2>
+    </div>
 
-<div class="services">
-<p id="serv">Қызметтер</p>
-<p>Жеткізу</p>
-<p>Прайс</p>
-<p>Фастфуд</p>
-<p>Бронь</p>
 
-</div>
-<br>
-<br>
+    <div class="bluda">
 
-<div>
-<p id="information">Ақпарат</p>
-<p>Іс-шара</p>
-<p>Бізбен байланыс</p>
-<p>Құпиялық саясаты</p>
-<p>Қызметтер көрсету шарттары</p>
-</div>
+        <div class="beshbarmak">
+            <img src="assets/img/bannerImage.png" height="110px" width="120px">
+            <h3>Бешбармақ</h3>
+            <h5>Дәмді тағам</h5>
+            <p>10.000₸</p>
+        </div>
 
+        <div class="manty">
+            <img src="assets/img/sal6.png" height="110px" width="120px">
+            <h3>Манты</h3>
+            <h5>Дәмді тағам</h5>
+            <p>10.000₸</p>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="plov">
+        <img src="assets/img/big-plov.png" height="110px" width="120px">
+        <h3>Плов</h3>
+        <h5>Дәмді тағам</h5>
+        <p>10.000₸</p>
+    </div>
+
+    <div class="good">
+        <p id="good-food">Дәмді тағам</p>
+        <p>Мейрамхана</p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="services">
+        <p id="serv">Қызметтер</p>
+        <p>Жеткізу</p>
+        <p>Прайс</p>
+        <p>Фастфуд</p>
+        <p>Бронь</p>
+
+    </div>
+    <br>
+    <br>
+
+    <div>
+        <p id="information">Ақпарат</p>
+        <p>Іс-шара</p>
+        <p>Бізбен байланыс</p>
+        <p>Құпиялық саясаты</p>
+        <p>Қызметтер көрсету шарттары</p>
+    </div>
+    <br>
+    <br>
+    <div>
+        <p id="adress">Мекен-жай</p>
+        <p>Алматы , Қазақстан </p>
+        <p>Мауленова қ.92</p>
+        <p>999-888-777</p>
+        <p>damdi.tagam@gmail.com</p>
+    </div>
+    <p id="Amjilt">2023 Amjilt.All night reserved</p>
 </body>
+
 </html>
