--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="Дәмді">
-            <a href="">Дәмді</a>
+            <p>Дәмді</p>
         </div>
     </header>
     <hr>
